crates/parser/tests/snapshots/parser_test__m12_match_guard.snap
---
source: crates/parser/tests/parser_test.rs
expression: module
---
decls:
  - DefType:
      name: Option
      visibility: Private
      type_params:
        - a
      kind:
        Sum:
          variants:
            - name: Some
              fields:
                - Var:
                    name: a
                    span:
                      - 35
                      - 36
              span:
                - 30
                - 37
            - name: None
              fields: []
              span:
                - 40
                - 44
      deriving: []
      span:
        - 13
        - 44
  - DefFn:
      name: positive_or_zero
      visibility: Private
      type_params: []
      params:
        - name: opt
          ty:
            App:
              name: Option
              args:
                - Named:
                    name: Int
                    span:
                      - 78
                      - 81
              span:
                - 71
                - 82
          span:
            - 66
            - 82
      constraints: []
      return_type:
        Named:
          name: Int
          span:
            - 87
            - 90
      body:
        Match:
          scrutinee:
            Var:
              name: opt
              span:
                - 99
                - 102
          arms:
            - pattern:
                Constructor:
                  name: Some
                  args:
                    - Var:
                        name: x
                        span:
                          - 114
                          - 115
                  span:
                    - 109
                    - 116
              guard:
                BinaryOp:
                  op: Gt
                  lhs:
                    Var:
                      name: x
                      span:
                        - 120
                        - 121
                  rhs:
                    Lit:
                      value:
                        Int: 0
                      span:
                        - 124
                        - 125
                  span:
                    - 120
                    - 125
              body:
                Var:
                  name: x
                  span:
                    - 129
                    - 130
              span:
                - 109
                - 130
            - pattern:
                Wildcard:
                  span:
                    - 136
                    - 137
              guard: ~
              body:
                Lit:
                  value:
                    Int: 0
                  span:
                    - 141
                    - 142
              span:
                - 136
                - 142
          span:
            - 93
            - 145
      span:
        - 45
        - 145
